--- a/6dejaar/kinematica/knmtc_1dim_verticale_worp.tex
+++ b/6dejaar/kinematica/knmtc_1dim_verticale_worp.tex
@@ -10,10 +10,17 @@
 
 
 
- In het jaar 1586 stond bovenop de Nieuwe Kerk van Delft een wetenschapper uit Brugge. Onze perceptie leert dat zwaardere lichamen sneller vallen dan lichtere. Een pluim en een steen komen in regel niet op hetzelfde moment op de grond terecht. Toch blijkt deze intuitie niet te kloppen. \href{https://www.canonvanvlaanderen.be/events/simon-stevin/}{Simon Stevin} liet vanop de kerktoren twee loden bollen met een verschillend gewicht vallen en stelde vast dat ze op hetzelfde moment de grond raakten. 
+ In het jaar 1586 stond een wetenschapper uit Brugge op de Nieuwe Kerk van Delft . 
+ Onze perceptie leert dat zwaardere lichamen sneller vallen dan lichtere. 
+ Een pluim en een steen komen in regel niet op hetzelfde moment op de grond terecht. 
+ Toch blijkt deze intuitie niet te kloppen. \href{https://www.canonvanvlaanderen.be/events/simon-stevin/}{Simon Stevin} liet vanop de kerktoren twee loden bollen met een verschillend gewicht vallen en stelde vast dat ze op hetzelfde moment de grond raakten. 
 	
 
-In vacu\"um -- waar voorwerpen geen luchtweerstand ondervinden -- blijkt de massa geen rol te spelen bij de constante versnelling die de voorwerpen krijgen: alle voorwerpen vallen met dezelfde versnelling! Met lode bollen kon Simon Stevin dit effect uitschakelen. De theoretische verklaring voor dit experiment hoort thuis in de dynamica. In de kinematica wordt enkel de beweging beschreven. Omdat de valversnelling constant is, heb je simpelweg met een EVRB te maken.
+In vacuüm -- waar voorwerpen geen luchtweerstand ondervinden -- blijkt de massa geen rol te spelen bij de constante versnelling die de voorwerpen krijgen: alle voorwerpen vallen met dezelfde versnelling! 
+Met lode bollen kon Simon Stevin dit effect uitschakelen. 
+De theoretische verklaring voor dit experiment hoort thuis in de dynamica. 
+In de kinematica wordt enkel de beweging beschreven. 
+Omdat de valversnelling constant is, heb je hier simpelweg met een EVRB te maken.
 
 \begin{image}
 
