--- a/6dejaar/vectoren/vct_notatie.tex
+++ b/6dejaar/vectoren/vct_notatie.tex
@@ -91,23 +91,26 @@ Aan de zin van een vector kan wiskundig een teken gekoppeld worden, dit hangt af
 
 
 De grootte van de vector wordt vaak als enkel positief aanzien (vooral in een situatie zonder referentie-as). 
-Om dit te beklemtonen gebruikt men soms het normteken van de vector \( \lVert \vec{z} \rVert \) of het absolutewaardeteken van de grootte \(\lvert z \rvert \). 
-Wanneer er echter geen twijfel is en de grootte sowieso positief is (zoals meestal bij krachten), noteert men ook gewoon \(z\). 
+Om dit te beklemtonen gebruikt men soms het normteken van de vector
+ $ \lVert \vec{z} \rVert $ 
+of het absolutewaardeteken van de grootte
+ $\lvert z \rvert $. 
+Wanneer er echter geen twijfel is en de grootte sowieso positief is (zoals meestal bij krachten), noteert men ook gewoon $z$. 
 
 Enkele voorbeelden:
 
 
 % INSERT TIKZ PICTURE ZWAARTEKRACHT EN ROLLENDE BAL 
 
-De richting van een vector wordt soms ook weergegeven met een eenheidsvector \(\vec{e}\). Dit is een vector met een welbepaalde richting en met grootte gelijk aan \(1\). Het nut hiervan komt in formules tot uiting. Ook in de algebraïsche notatie kan men de drie kenmerken weergeven:
+De richting van een vector wordt soms ook weergegeven met een eenheidsvector $\vec{e}$ . Dit is een vector met een welbepaalde richting en met grootte gelijk aan $ 1 $. Het nut hiervan komt in formules tot uiting. Ook in de algebraïsche notatie kan men de drie kenmerken weergeven:
 
 
 %  INSERT TIKZ NORM RICHTING ZIN ALGEBRAISCH 
 
 \begin{remark}
-Als de grootte van een vector \(\vec{c}\) gelijk is aan nul, noemt men dit ook de \textbf{nulvector}. 
-Men noteert dit als: \(\vec{c} = \vec{0}\)   of  \( \lVert \vec{c} \rVert \)  of   \( c = 0 \)
-Men mag niet noteren dat: \( \vec{c} = 0\)  
+Als de grootte van een vector $\vec{c}$ gelijk is aan nul, noemt men dit ook de \textbf{nulvector}. 
+Men noteert dit als: $\vec{c} = \vec{0}$   of  $ \lVert \vec{c} \rVert $  of   $ c = 0 $
+Men mag niet noteren dat: $ \vec{c} = 0$  
 Linkerlid en rechterlid moeten immers beiden een scalar of beiden een vector zijn!
 \end{remark}
 	
