eerste wet: aanpassen oef1; (en recompile wet 2 en versnelling voor title).

--- a/6dejaar/dynamica/nwtn_traagheid.tex
+++ b/6dejaar/dynamica/nwtn_traagheid.tex
@@ -1,6 +1,5 @@
 \documentclass{ximera}
 \input{../../preamble}
-
 \addPrintStyle{..}
 
 \begin{document}
@@ -41,15 +40,28 @@ Een voorwerp behoudt zijn toestand van rust of van eenparige rechtlijnige bewegi
 \end{denkvraag*}
 
 \begin{exercise}
-	Wanneer je met de fiets fietst, rechtdoor en met een constante snelheid, is de kracht die je voorwaarts uitoefent dan
-	\begin{multipleChoice}
-		\choice{groter}
-		\choice{kleiner of}
-		\choice[correct]{gelijk}
-	\end{multipleChoice}
-	aan de weerstandskracht die achterwaarts is gericht? Is met andere woorden de resulterende kracht op jouw fiets naar voren gericht, nul of naar achteren gericht?
+	Wanneer je met de fiets fietst, rechtdoor en met een constante snelheid, dan is de kracht die je voorwaarts uitoefent 
+	%\begin{multipleChoice}
+	\wordChoice{
+		\choice{groter dan}
+		\choice{kleiner dan}
+		\choice[correct]{gelijk aan}
+	}
+	%\end{multipleChoice}
+	de weerstandskracht die achterwaarts is gericht? 
+	\\
+	Met andere woorden: de resulterende kracht op jouw fiets is dan
+	\wordChoice{
+		\choice{naar voren gericht}
+		\choice[correct]{nul}
+		\choice{naar achteren gericht}
+	}
+	.
 	\begin{oplossing}
-		Het antwoord is dat de resulterende kracht is nul is! Moest er immers een resulterende kracht zijn, dan zou volgens de wet van de traagheid de toestand van eenparige rechtlijnige beweging niet kunnen worden behouden.
+		De resulterende kracht is nul! 
+		Want als er een resulterende kracht was, dan zou volgens de wet van de traagheid de toestand van eenparige rechtlijnige beweging niet worden behouden, en zou je ofwel trager ofwel sneller gaan rijden.
+
+		Als je met een constante snelheid fiets, is de kracht die je uitoefent precies voldoende om alle wrijvingskrachten op te heffen. Als je minder kracht uitoefent, vertraag je en als je meer kracht uitoefent versnel je.
 	\end{oplossing}
 \end{exercise}
 
