printstyle: no image manip

--- a/printstyle.sty
+++ b/printstyle.sty
@@ -579,11 +579,11 @@
 \makeatother
 
 %% image environment: resize en center
-\let\image\relax
-\let\endimage\relax
-\NewEnviron{image}[1][3in]{% 
-  \begin{center}\resizebox{#1}{!}{\BODY}\end{center}% resize and center
-}
+% \let\image\relax
+% \let\endimage\relax
+% \NewEnviron{image}[1][3in]{% 
+%   \begin{center}\resizebox{#1}{!}{\BODY}\end{center}% resize and center
+% }
 
 % Nederlandse titel van 'Contents'
 \renewcommand{\contentsname}{Inhoudsopgave}
