--- a/6dejaar/dynamica/nwtn_tweede_beginsel.tex
+++ b/6dejaar/dynamica/nwtn_tweede_beginsel.tex
@@ -135,7 +135,7 @@ In feite zit de eerste wet vervat in de tweede. Toch blijven we hem gebruiken, v
 \begin{exercise}
 	Onder invloed van een kracht $\vec{F}$ beweegt een blok met constante snelheid over een ruw horizontaal oppervlak. De krachten op de figuur hebben de juiste ori\"entatie maar niet noodzakelijk de juiste grootte. Welke van de volgende relaties tussen $\vec{F}$, $\vec{F}_w$, $\vec{F}_z$ en $\vec{F}_n$ moet in ieder geval waar zijn?
 
-	\begin{minipage}[c]{0.6\textwidth}
+	\begin{minipage}{0.6\textwidth}
 	\begin{multipleChoice}
 	\choice{$F_w=F$ en $F_n=F_z$}
 	\choice[correct]{$F_w<F$ en $F_n<F_z$}
@@ -144,9 +144,11 @@ In feite zit de eerste wet vervat in de tweede. Toch blijven we hem gebruiken, v
 	\end{multipleChoice}
 	\end{minipage}
 	\hfill
-	\begin{image}[.35\linewidth]
+	\begin{minipage}{0.35\textwidth}
+	\begin{image}
 			\includegraphics{blok_horizontvlak}
 	\end{image}
+	\end{minipage}
 
 	\begin{oplossing}
 	We ontbinden de kracht $\vec{F}$ in zijn twee componenten volgens de horizontale en verticale richting: $\vec{F}_x,\vec{F}_y$. Aangezien het blok in de verticale richting niet versnelt, moet $F_z=F_n+F_y$ of $F_n<F_z$.
