--- a/preamble.tex
+++ b/preamble.tex
@@ -858,7 +858,7 @@
 % te gebruiken als je zeker een newline wil na de hoofdig en titel
 % (in het bijzonder itemize zonder \nl is 'lelijk' ...)
 \ifdefined\HCode
-\newcommand{\nl}{}
+\newcommand{\nl}{\Hnewline}
 \else
 \newcommand{\nl}{\ \par} % newline (achter heading van definition etc.)
 \fi
