--- a/6dejaar/kinematica/knmtc_bgrppn_referentiestelsel.tex
+++ b/6dejaar/kinematica/knmtc_bgrppn_referentiestelsel.tex
@@ -1,7 +1,7 @@
 \documentclass{ximera}
-\input{../preamble}
+\input{../../preamble}
 
-\addPrintStyle{..}
+\addPrintStyle{../..}
 
 \begin{document}
 	\author{Bart Lambregs}
@@ -9,22 +9,31 @@
     \xmsource\xmuitleg
 
 
-Elk systeem wordt beschreven ten opzichte van een \textbf{referentiestelsel}. 
-Hierbij wordt de ruimte zo ingedeeld dat elke plaats in de ruimte eenduidig wordt bepaald door \textbf{coördinaten}:
-dit zijn een aantal getallen die eenduidig deze plaats bepalen van een punt ten opzichte van het gekozen assenstelsel en de oorsprong. 
-
+Elk bewegend systeem wordt beschreven ten opzichte van een \textbf{referentiestelsel}. Deze omvat een assenstelsel met een oorsprong (= het \textbf{referentiepunt}).
+Binnen dit referentiestelsel worden de kinematische grootheden beschreven, in de eerste plaats vectorieel. 
+ 
 Als je een vogel ziet vliegen kan je deze beweging op verschillende manieren beschrijven: de vogel kan \textit{stijgen} of een \textit{duikvlucht} nemen. De vogel kan \textit{omdraaien} of -indien het een kolibri is- misschien zelfs \textit{blijven hangen}. Om deze bewegingen kwantitatief en nauwkeurig te bespreken kies je een referentiestelsel en coördinaatassen. Op die manier krijgt de vogel een positievector die de positie aangeeft, een snelheidsvector die de snelheid aangeeft, ... 
 
-De keuze van het referentiestelsel is altijd relatief. Toch is het erg belangrijk om telkens duidelijk van waaruit een beweging beschreven wordt.
+De keuze van het referentiestelsel is altijd relatief. Toch is het erg belangrijk om telkens duidelijk te maken van waaruit een beweging beschreven wordt.
 Stel je voor dat je nu aan een bureau gedreven aan het studeren bent en je houdt je pen op \textit{ooghoogte}, hoe 'hoog' bevindt je pen zich dan? Meet je dit vanaf je tafelblad, de vloer, het straatniveau, het aantal meters boven de zeespiegel, ...? In welke eenheid meet je dit? Wat is je eenheidsvector en in welke richting kies je de positieve as? 
 
+Voor de eenvoud wordt meestal een referentiestelsel gekozen dat voor de 'waarnemer' stilstaat. 
+Hieronder een voorbeeld van een voetbalveld waarop de positie \(\vec{r}\) van de voetballer duidelijk verschillend is naargelang het referentiepunt.
+Voor een toeschouwer in het publiek staan beide referentiestelsels stil, bijgevolg is de snelheid \(\vec{v}\) voor beiden dezelfde.
+
+
+% \begin{image}
+% 	% \includegraphics[width=0.3\textwidth]{referentiestelsels}
+% % Uit ppt Vincent, IK WIL AFBEELDING GROTER MAAR LUKT ME NIET.
+% \end{image}
 
 \begin{exercise}
 De kolibri in onderstaande foto blijft ter plekke in de lucht hangen onder de bloem. Geef twee referentiestelsels waarin deze vogel \textbf{niet} stilstaat. 
 
 \begin{image}
-	\includegraphics[width=0.6\textwidth]{kolibri}
+	\includegraphics[width=0.1\textwidth]{kolibri}
 % Bron: https://unsplash.com/photos/green-and-black-humming-bird-flying-p-DDK9lOmmE 
+% AFBEELDING KLEINER? LUKT ME NIET
 \end{image}
 
 \begin{oplossing}
@@ -39,3 +48,7 @@ De kolibri in onderstaande foto blijft ter plekke in de lucht hangen onder de bl
 
 
 \end{document}
+
+
+
+
