enkel oefeningen toegevoegd

--- a/1Doef_local.tex
+++ b/1Doef_local.tex
@@ -40,7 +40,7 @@
 % \activitychapter{6dejaar/kinematica/knmtc_bgrppn_oef.tex}
 
 
-% \part{Eendimensionale bewegingen}
+\part{Eendimensionale bewegingen}
 
 % \activitychapter{6dejaar/kinematica/knmtc_1dim_intro.tex}
 % \activitychapter{6dejaar/kinematica/knmtc_1dim_begrippen.tex}
@@ -48,7 +48,9 @@
 % \activitychapter{6dejaar/kinematica/knmtc_1dim_EVRB_rechtstreeks.tex}
 % \activitychapter{6dejaar/kinematica/knmtc_1dim_oplossingsstrategie.tex}
 % \activitychapter{6dejaar/kinematica/knmtc_1dim_verticale_worp.tex}
-
+\activitychapter{6dejaar/kinematica/knmtc_1dim_oef.tex}
+\activitychapter{6dejaar/kinematica/knmtc_1dim_oef_denkvragen.tex}
+\activitychapter{6dejaar/kinematica/knmtc_1dim_oef_vraagstukken.tex}
 
 
 % \part{Tweedimensionale bewegingen}
@@ -61,15 +63,15 @@
 % \activitychapter{6dejaar/kinematica/knmtc_2dim_horizontale_worp.tex}
 
 
-\part{De beginselen van Newton}
+% \part{De beginselen van Newton}
 
 % \activitychapter{6dejaar/dynamica/nwtn_intro.tex}
 % \activitychapter{6dejaar/dynamica/nwtn_traagheid.tex}
 % \activitychapter{6dejaar/dynamica/nwtn_tweede_beginsel.tex}
 % \activitychapter{6dejaar/dynamica/nwtn_derde_beginsel.tex}
 % \activitychapter{6dejaar/dynamica/nwtn_oef.tex} = te verwijderen ...
-\activitychapter{6dejaar/dynamica/nwtn_denkvragen.tex}
-\activitychapter{6dejaar/dynamica/nwtn_vraagstukken.tex}
+% \activitychapter{6dejaar/dynamica/nwtn_denkvragen.tex}
+% \activitychapter{6dejaar/dynamica/nwtn_vraagstukken.tex}
 % % \activitychapter{6dejaar/nwtn_oplossingsstrategie.tex}
 % % \activitychapter{6dejaar/nwtn_historische_uitwijding.tex}
 
